@@ -12,7 +12,9 @@ import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.List;
 
 import javax.annotation.PostConstruct;
@@ -70,7 +72,9 @@ public class main {
 			public void windowClosing(WindowEvent arg0) {
 				
 				try {
-					Runtime.getRuntime().exec("git.sh");
+					
+					Process process = new ProcessBuilder("git.sh","","").start();
+					
 				} catch (IOException e) {
 					// TODO Auto-generated catch block
 					e.printStackTrace();
